Fixed overflow scroll bars

--- a/cdc-frontend-app/src/components/Schedule/styles.scss
+++ b/cdc-frontend-app/src/components/Schedule/styles.scss
@@ -2,7 +2,6 @@
 @use "sass:map";
 
 .Schedule {
-  overflow-x: scroll;
 
   table {
     width: 100%;
